--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -2,6 +2,9 @@
 <html lang="en" data-theme="light">
 <head>
     <link href="/dist/output.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Signika:wght@700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -44,6 +47,17 @@
         </div>
     </div>
 </div>
+<div>
 
+</div>
+<div class="hero min-h-screen bg-base-200">
+    <div class="hero-content flex-col lg:flex-row-reverse">
+        <div >
+            <h1>THE SDG AWARD FOR KIDS</h1>
+            <img src="../img/artwork_home.png"  alt="people">
+        </div>
+    </div>
+</div>
+</div>
 </body>
 </html>
